updating the content

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     VAHAN <br />
                     <span>SAHAKYAN</span>
                   </h1>
-                  <h4 class="profession">JavaScript Developer</h4>
+                  <h4 class="profession">Software Engineer</h4>
                 </div>
                 <div class="avatar"></div>
               </header>
@@ -105,16 +105,20 @@
                     <h3>PROFESSIONAL</h3>
 
                     <ul>
-                      <li>MERN Stack</li>
+                      <!-- <li>MERN Stack</li>
                       <ul>
                         <li><strong>M</strong>ongoDB</li>
                         <li><strong>E</strong>xpress</li>
                         <li><strong>R</strong>eact JS</li>
                         <li><strong>N</strong>ode JS</li>
-                      </ul>
-                      <li>Redux / Saga</li>
-                      <li>APIs / Postman</li>
-                      <li>Git - Version Control</li>
+                      </ul> -->
+                      <li>Java / Spring</li>
+                      <li>JavaScript / TypeScript</li>
+                      <li>React / Node / Express</li>
+                      <li>Redux / Saga / GraphQL</li>
+                      <li>APIs / Postman / Swagger</li>
+                      <li>Git / Github / Bitbucket</li>
+                      <li>Jira / Confluence</li>
                     </ul>
                   </div>
                   <div class="education">
@@ -122,18 +126,22 @@
                     <br />
                     <h4>BOOTCAMP</h4>
                     <h5>BPC Armenia</h5>
-                    <p>C++, Python, Linux, Bash</p>
+                    <p>[c++, python, linux, bash]</p>
                     <p>2018-2019</p>
                     <br />
                     <h4>COURSES</h4>
                     <h5>UDEMY: Jonas Schmedtmann</h5>
-                    <p>- "The Complete JS Course"</p>
-                    <p>- "Node.js Bootcamp"<br />[MongoDB, Express]</p>
+                    <p>- The Complete JS Course</p>
+                    <p>- Node Bootcamp</p>
                     <p>2021-2022</p>
                     <br />
                     <h5>ZTM: Andrei Neagoie</h5>
-                    <p>- REACT.js Course</p>
+                    <p>- React/Redux Course</p>
                     <p>2021-2022</p>
+                    <br />
+                    <h5>John Purcell: Derby, UK</h5>
+                    <p>- Java Core 11 Course</p>
+                    <p>2022-2023</p>
                   </div>
                 </aside>
                 <div class="content">
@@ -141,44 +149,67 @@
                     <!-- PROJECTS START -->
                     <h2>PROJECTS</h2>
                     <h3 class="experience-name">CRWN CLOTHING</h3>
-                    <h4>
-                      REACT <span> | </span> REDUX <span> | </span> SAGA <span> | </span> STRIPE
-                      <span> | </span> FIREBASE
-                    </h4>
-
-                    <p>
-                      CRWN Clothing is an <strong>E-Commerce Web Application</strong>. It has navigation and routing to
-                      redirect between pages of categories of items. The items can be added to the Cart which reflects
-                      all the live updates, it has a CTA to the checkout page, where you can increment and decrement the
-                      added items, remove them, the changes are visible both on checkout page and cart dropdown. With
-                      Firebase we authorize our Users by using their Google Accounts. Besides "Sign-in", we also have
-                      features like "Sign-Up with Email and Password" and "Sign-Out".
-                    </p>
+                    <div class="job-info">
+                      <h4>
+                        React
+                        <span> | </span>
+                        Saga
+                        <span> | </span>
+                        Stripe
+                        <span> | </span>
+                        Firebase
+                        <span> | </span>
+                        Styled-Components
+                      </h4>
+                    </div>
                     <ul style="margin-top: 4px">
-                      <li><strong>Redux-Sagas</strong> for efficient asynchronous requests</li>
-                      <li><strong>Styled-Components</strong> for dynamic stylings</li>
-                      <li><strong>Stripe API</strong> for handling payments [test version]</li>
-                      <li><strong>Firebase</strong> for Authentication and Storage [Firestore]</li>
-
+                      <li><strong>E-Commerce</strong> web application</li>
+                    </ul>
+                    <ul style="margin-top: 4px">
                       <li class="project-cta">
                         <a target="_blank" href="https://vahan-sahakyan.github.io/crwn-clothing">CRWN Clothing</a>
-                        |
-                        <a target="_blank" href="https://github.com/vahan-sahakyan/crwn-clothing/">Source Code</a>
+                        <a target="_blank" href="https://github.com/vahan-sahakyan/crwn-clothing/">
+                          <span>
+                            <img
+                              alt="expand code"
+                              src="https://gw.alipayobjects.com/zos/antfincdn/Z5c7kzvi30/expand.svg"
+                              class="code-expand-icon-hide"
+                            />
+                            <img
+                              alt="expand code"
+                              src="https://gw.alipayobjects.com/zos/antfincdn/4zAaozCvUH/unexpand.svg"
+                              class="code-expand-icon-show"
+                            />
+                            Browse Code
+                          </span></a
+                        >
                       </li>
                     </ul>
                     <h3 class="experience-name">E-PIANO</h3>
-                    <h4>JavaScript <span> | </span> Audio API <span> | </span> OOP</h4>
-                    <p>
-                      E-Piano is an in-browser
-                      <strong>Music-Keyboard Emulator</strong>.
-                    </p>
+                    <div class="job-info">
+                      <h4>JavaScript <span> | </span> Audio API <span> | </span> OOP</h4>
+                    </div>
                     <ul style="margin-top: 4px">
-                      <li><strong>JS Audio API</strong> for manipulating sounds</li>
-                      <li><strong>OOP Paradigm</strong> for future enhancements [other keyboard type instances]</li>
+                      <li><strong>Music-Keyboard</strong> in-browser emulator</li>
+                    </ul>
+                    <ul style="margin-top: 4px">
                       <li class="project-cta">
                         <a target="_blank" href="https://vahan-sahakyan.github.io/e-piano">E-Piano</a>
-                        |
-                        <a target="_blank" href="https://github.com/vahan-sahakyan/e-piano/"> Source Code</a>
+                        <a target="_blank" href="https://github.com/vahan-sahakyan/e-piano/">
+                          <span>
+                            <img
+                              alt="expand code"
+                              src="https://gw.alipayobjects.com/zos/antfincdn/Z5c7kzvi30/expand.svg"
+                              class="code-expand-icon-hide"
+                            />
+                            <img
+                              alt="expand code"
+                              src="https://gw.alipayobjects.com/zos/antfincdn/4zAaozCvUH/unexpand.svg"
+                              class="code-expand-icon-show"
+                            />
+                            Browse Code</span
+                          >
+                        </a>
                       </li>
                     </ul>
                     <!-- PROJECTS END -->
@@ -186,18 +217,41 @@
                     <br />
                     <!-- EXPERIENCE START -->
 
+                    <!-- 1 -->
                     <h2>EXPERIENCE</h2>
                     <h3 class="experience-name">DATAFOUNDRY LABS</h3>
                     <div class="job-info">
                       <h4>
-                        SOFTWARE ENGINEER
+                        React.js
                         <span> | </span>
-                        REACT
+                        Saga
+                        <span> | </span>
+                        Antd
+                        <span> | </span>
+                        Chart.js
+                        <span> | </span>
+                        D3.js
                       </h4>
                     </div>
-
                     <ul style="margin-top: 4px">
-                      <li><strong>CRMS [SaaS]</strong> complex project</li>
+                      <li><strong>Clinical Research Management</strong> SaaS project</li>
+                    </ul>
+
+                    <!-- 2 -->
+                    <h3 class="experience-name">NWSLAB</h3>
+                    <div class="job-info">
+                      <h4>
+                        React
+                        <span> | </span>
+                        TypeScript
+                        <span> | </span>
+                        Material UI
+                        <span> | </span>
+                        React Hook Form
+                      </h4>
+                    </div>
+                    <ul style="margin-top: 4px">
+                      <li><strong>Warner Music Group</strong> label management project</li>
                     </ul>
                     <!-- EXPERIENCE END -->
                   </div>
