created about section

--- a/index.html
+++ b/index.html
@@ -105,19 +105,12 @@
                     <h3>PROFESSIONAL</h3>
 
                     <ul>
-                      <!-- <li>MERN Stack</li>
-                      <ul>
-                        <li><strong>M</strong>ongoDB</li>
-                        <li><strong>E</strong>xpress</li>
-                        <li><strong>R</strong>eact JS</li>
-                        <li><strong>N</strong>ode JS</li>
-                      </ul> -->
-                      <li>Java / Spring</li>
                       <li>JavaScript / TypeScript</li>
                       <li>React / Node / Express</li>
                       <li>Redux / Saga / GraphQL</li>
                       <li>APIs / Postman / Swagger</li>
                       <li>Git / Github / Bitbucket</li>
+                      <li>Java / Spring</li>
                       <li>Jira / Confluence</li>
                     </ul>
                   </div>
@@ -146,8 +139,26 @@
                 </aside>
                 <div class="content">
                   <div class="experience">
-                    <!-- EXPERIENCE START -->
+                    <!-- ABOUT START -->
+                    <h2>ABOUT</h2>
+                    <p>
+                      Always-learning engineer with experience in developing enterprise-level applications for about 2
+                      years.
+                      <br />
+                      &bull;&nbsp; Skilled in Javascript and related technologies
+                      <br />
+                      &bull;&nbsp; Familiar with Java Core, Spring
+                      <br />
+                      &bull;&nbsp; English level - Upper Intermediate (B2)
+                      <br />
+                      &bull;&nbsp; Strong interpersonal communication skills
+                      <br />
+                      &bull;&nbsp; Ability and openness to learn, fail, reflect and apply learnings moving forward
+                    </p>
+                    <br />
+                    <!-- ABOUT END -->
 
+                    <!-- EXPERIENCE START -->
                     <!-- 1 -->
                     <h2>EXPERIENCE</h2>
                     <h3 class="experience-name">DATAFOUNDRY LABS</h3>
@@ -185,8 +196,10 @@
                       <li><strong>Warner Music Group</strong> label management project</li>
                     </ul>
                     <!-- EXPERIENCE END -->
+
                     <hr />
                     <br />
+
                     <!-- PROJECTS START -->
                     <h2>PROJECTS</h2>
                     <h3 class="experience-name">CRWN CLOTHING</h3>
