commiting via rebasing strategy

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet" />
 
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="./favicon.png" />
+    <link rel="icon" type="image/png" href="./favicon_blue.png" />
     <script defer src="./script.js"></script>
     <title>Curriculum Vitae | Vahan Sahakyan</title>
   </head>
@@ -20,7 +20,7 @@
         <div class="left"></div>
         <div class="middle">
           <!-- The A4 CV Paper -->
-          <a id="download" href="./download/REACT-Vahan-Sahakyan.pdf" download="REACT_Vahan_Sahakyan"
+          <a id="download" href="./download/WEB_DEV_Vahan_Sahakyan.pdf" download="WEB_DEV_Vahan_Sahakyan"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -164,11 +164,11 @@
                     <h3 class="experience-name">DATAFOUNDRY LABS</h3>
                     <div class="job-info">
                       <h4>
-                        React.js
+                        React
                         <span> | </span>
                         Saga
                         <span> | </span>
-                        Antd
+                        Ant Design
                         <span> | </span>
                         Chart.js
                         <span> | </span>
