updated clipboard functionality

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=0.5, maximum-scale=0.5" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=0.5, maximum-scale=0.5"
+    />
     <link rel="stylesheet" href="style.css" />
     <link id="dark-css" rel="stylesheet" href="dark.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Raleway" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway"
+      rel="stylesheet"
+    />
 
-    <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400i|Rubik"
+      rel="stylesheet"
+    />
     <link rel="icon" type="image/png" href="./favicon_blue.png" />
     <script defer src="./script.js"></script>
     <title>Curriculum Vitae | Vahan Sahakyan</title>
@@ -20,7 +29,10 @@
         <div class="left"></div>
         <div class="middle">
           <!-- The A4 CV Paper -->
-          <a id="download" href="./download/WEB_DEV_Vahan_Sahakyan.pdf" download="WEB_DEV_Vahan_Sahakyan"
+          <a
+            id="download"
+            href="./download/WEB_DEV_Vahan_Sahakyan.pdf"
+            download="WEB_DEV_Vahan_Sahakyan"
             ><svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
@@ -82,10 +94,16 @@
                 </svg>
               </a>
             </div>
-            <div class="clipboard-message hidden">Email Copied Successfully</div>
+            <div class="clipboard-message hidden">
+              Email Copied Successfully
+            </div>
             <div class="sticker">
-              <div title="Copy to Clipboard" class="phone">+374 95 27 68 27</div>
-              <div title="Copy to Clipboard" class="email">vahan.sahakyan1996@gmail.com</div>
+              <div title="Copy to Clipboard" class="phone">
+                +374 95 27 68 27
+              </div>
+              <div title="Copy to Clipboard" class="email">
+                vahan.sahakyan1996@gmail.com
+              </div>
             </div>
             <div class="wrapper">
               <header>
@@ -142,10 +160,11 @@
                     <!-- ABOUT START -->
                     <h2>ABOUT</h2>
                     <p>
-                      Always-learning engineer with experience in developing enterprise-level applications for about 2
-                      years.
+                      Always-learning engineer with experience in developing
+                      enterprise-level applications for about 2 years.
                       <br />
-                      &bull;&nbsp; Skilled in Javascript and related technologies
+                      &bull;&nbsp; Skilled in Javascript and related
+                      technologies
                       <br />
                       &bull;&nbsp; Familiar with Java Core, Spring
                       <br />
@@ -153,7 +172,8 @@
                       <br />
                       &bull;&nbsp; Strong interpersonal communication skills
                       <br />
-                      &bull;&nbsp; Ability and openness to learn, fail, reflect and apply learnings moving forward
+                      &bull;&nbsp; Ability and openness to learn, fail, reflect
+                      and apply learnings moving forward
                     </p>
                     <br />
                     <!-- ABOUT END -->
@@ -176,7 +196,10 @@
                       </h4>
                     </div>
                     <ul style="margin-top: 4px">
-                      <li><strong>Clinical Research Management</strong> SaaS project</li>
+                      <li>
+                        <strong>Clinical Research Management</strong> SaaS
+                        project
+                      </li>
                     </ul>
 
                     <!-- 2 -->
@@ -193,7 +216,10 @@
                       </h4>
                     </div>
                     <ul style="margin-top: 4px">
-                      <li><strong>Warner Music Group</strong> label management project</li>
+                      <li>
+                        <strong>Warner Music Group</strong> label management
+                        project
+                      </li>
                     </ul>
                     <!-- EXPERIENCE END -->
 
@@ -221,8 +247,15 @@
                     </ul>
                     <ul style="margin-top: 4px">
                       <li class="project-cta">
-                        <a target="_blank" href="https://vahan-sahakyan.github.io/crwn-clothing">CRWN Clothing</a>
-                        <a target="_blank" href="https://github.com/vahan-sahakyan/crwn-clothing/">
+                        <a
+                          target="_blank"
+                          href="https://vahan-sahakyan.github.io/crwn-clothing"
+                          >CRWN Clothing</a
+                        >
+                        <a
+                          target="_blank"
+                          href="https://github.com/vahan-sahakyan/crwn-clothing/"
+                        >
                           <span>
                             <img
                               alt="expand code"
@@ -241,15 +274,27 @@
                     </ul>
                     <h3 class="experience-name">E-PIANO</h3>
                     <div class="job-info">
-                      <h4>JavaScript <span> | </span> Audio API <span> | </span> OOP</h4>
+                      <h4>
+                        JavaScript <span> | </span> Audio API
+                        <span> | </span> OOP
+                      </h4>
                     </div>
                     <ul style="margin-top: 4px">
-                      <li><strong>Music-Keyboard</strong> in-browser emulator</li>
+                      <li>
+                        <strong>Music-Keyboard</strong> in-browser emulator
+                      </li>
                     </ul>
                     <ul style="margin-top: 4px">
                       <li class="project-cta">
-                        <a target="_blank" href="https://vahan-sahakyan.github.io/e-piano">E-Piano</a>
-                        <a target="_blank" href="https://github.com/vahan-sahakyan/e-piano/">
+                        <a
+                          target="_blank"
+                          href="https://vahan-sahakyan.github.io/e-piano"
+                          >E-Piano</a
+                        >
+                        <a
+                          target="_blank"
+                          href="https://github.com/vahan-sahakyan/e-piano/"
+                        >
                           <span>
                             <img
                               alt="expand code"
