adding pdf-mode for easy pdf-version screenshoting, cv update

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <link rel="stylesheet" href="style.css" />
     <link id="dark-css" rel="stylesheet" href="dark.css" />
+    <link id="pdf-mode-css" rel="stylesheet" href="pdf-mode.css" disabled />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway"
       rel="stylesheet"
@@ -116,6 +117,10 @@
                 </div>
                 <div class="avatar"></div>
               </header>
+              <section class="pdf-mode-contacts">
+                <div>vahan.sahakyan1996@gmail.com</div>
+                <div>+374 95 27 68 27</div>
+              </section>
               <div class="content-wrapper">
                 <aside>
                   <div class="skills">
@@ -125,11 +130,11 @@
                     <ul>
                       <li>JavaScript / TypeScript</li>
                       <li>React / Node / Express</li>
-                      <li>Redux / Saga / GraphQL</li>
+                      <li>Redux / Saga / Toolkit</li>
                       <li>APIs / Postman / Swagger</li>
-                      <li>Git / Github / Bitbucket</li>
-                      <li>Java / Spring</li>
-                      <li>Jira / Confluence</li>
+                      <li>Version Control / Git</li>
+                      <li>Java / Spring / SQL / JPA</li>
+                      <li>Shell-Scripting / RegExp</li>
                     </ul>
                   </div>
                   <div class="education">
@@ -143,7 +148,7 @@
                     <h4>COURSES</h4>
                     <h5>UDEMY: Jonas Schmedtmann</h5>
                     <p>- The Complete JS Course</p>
-                    <p>- Node Bootcamp</p>
+                    <p>- Node/Express Bootcamp</p>
                     <p>2021-2022</p>
                     <br />
                     <h5>ZTM: Andrei Neagoie</h5>
@@ -166,7 +171,8 @@
                       &bull;&nbsp; Skilled in Javascript and related
                       technologies
                       <br />
-                      &bull;&nbsp; Familiar with Java Core, Spring
+                      &bull;&nbsp; Familiar with Java Core, Spring, Hibernate,
+                      JPA
                       <br />
                       &bull;&nbsp; English level - Upper Intermediate (B2)
                       <br />
@@ -191,14 +197,12 @@
                         Ant Design
                         <span> | </span>
                         Chart.js
-                        <span> | </span>
-                        D3.js
                       </h4>
                     </div>
                     <ul style="margin-top: 4px">
                       <li>
-                        <strong>Clinical Research Management</strong> SaaS
-                        project
+                        <strong>Clinical Risks & Signals</strong>
+                        Monitoring solution
                       </li>
                     </ul>
 
@@ -217,8 +221,8 @@
                     </div>
                     <ul style="margin-top: 4px">
                       <li>
-                        <strong>Warner Music Group</strong> label management
-                        project
+                        <strong>Music Rights & Distribution</strong> Management
+                        platform
                       </li>
                     </ul>
                     <!-- EXPERIENCE END -->
